# SIESTA_AFM_input_Generator

./: .gitignore  LICENSE  README.ko.md  README.md  app.py  pyproject.toml  run_gui.bat
.github/workflows/: tests.yml
examples/: Co3O4_spinel_COD1538531.cif  CoO_bulk.cif  CuO_111_slab.cif  CuO_bulk.cif  Fe_CO5_homogeneous_catalyst.xyz  NiCo2O4_311_slab.cif  NiCo2O4_spinel_demo.cif  NiO_111_slab.cif  afm_spin.fdf  input.fdf  moments.yaml
siesta_afm/: __init__.py  cli.py  fdf_writer.py  gui.py  input_template.py  io.py  magnetic_sites.py  neighbors.py  ordering.py  results.py  structure.py  symmetry.py  validation.py  visualize.py  workflows.py
siesta_afm/gui/: __init__.py  app.py  controllers.py
tests/: test_cli.py  test_fdf_parser.py  test_gui.py  test_input_template.py  test_io.py  test_magnetic_sites.py  test_neighbors.py  test_ordering.py  test_results.py  test_symmetry.py  test_validation.py  test_visualize.py  test_workflows.py  test_writer.py
tests/fixtures/: FeN6_molecule.xyz  NiCo2O4_311_pristine.cif  README.md  inverse_spinel_coordination.cif  mixed_order.XV  realistic_mixed.fdf  realistic_mixed_coordinates.fdf  siesta_4_1_hirshfeld_net.out  siesta_4_1_mulliken.out  siesta_5_atomic_populations.out
